Friday Edits:
Debugging:
- Disabled value label at present time (optional)
- Added Outlaw research. (Not data yet)
- Changed value indicator to HashMap instead of LinkedList for keeping values correctly
- Improvement Dialogs
- Improvement Images
- Changed Rarity qualification of ResourceMaterialAmount.java
- Improved several small items.